load("@bazel_features//:features.bzl", "bazel_features")
load("@bazel_lib//:bzl_library.bzl", "bzl_library")
load("@bazel_lib//lib:utils.bzl", bazel_lib_utils = "utils")
load("//format/private:formatter_binary.bzl", "BZLMOD_TOOL_OVERRIDES", "BUILTIN_TOOL_LABELS")

package(default_visibility = ["//visibility:public"])

exports_files(glob(["*.bzl"]))

[
    alias(
        name = actual_label.rsplit(":", 1)[-1] if ":" in actual_label else actual_label.rsplit("/", 1)[-1],
        actual = actual_label,
    )
    for k, v in BUILTIN_TOOL_LABELS.items()
    for actual_label in [BZLMOD_TOOL_OVERRIDES[k] if bazel_features.external_deps.is_bzlmod_enabled and k in BZLMOD_TOOL_OVERRIDES else v]
]

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    deps = [
        "//format/private:formatter_binary",
        "@bazel_lib//lib:lists",
        "@bazel_lib//lib:utils",
        "@rules_multirun//:defs",
        "@rules_shell//shell:rules_bzl",
    ],
)

bzl_library(
    name = "repositories",
    srcs = ["repositories.bzl"],
    deps = [
        "@bazel_tools//tools/build_defs/repo:http.bzl",
        "@bazel_tools//tools/build_defs/repo:utils.bzl",
    ] + ["@bazel_tools//tools/build_defs/repo:cache.bzl"] if bazel_lib_utils.is_bazel_7_or_greater() else [],
)
