load("@bazel_lib//:bzl_library.bzl", "bzl_library")
load("//format/private:formatter_binary.bzl", "BUILTIN_TOOL_LABELS")

package(default_visibility = ["//visibility:public"])

exports_files(glob(["*.bzl"]))

# Alias the multitools for strict repo visibility under bzlmod
[
    alias(
        name = v.split("/")[-1],
        actual = v,
    )
    for v in BUILTIN_TOOL_LABELS.values()
]

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    deps = [
        "//format/private:formatter_binary",
        "@bazel_lib//lib:lists",
        "@bazel_lib//lib:utils",
        "@rules_multirun//:defs",
        "@rules_shell//shell:rules_bzl",
    ],
)
